--- a/home.html
+++ b/home.html
@@ -11,9 +11,10 @@
 <header>
 	<ul>
 		<li class="hamburger">
-			<div clas="bar1"></div>
+			<div class="bar1"></div>
 			<div class="bar2"></div>
-			<div class="bar3"></div></li>
+			<div class="bar3"></div>
+		</li>
 		<li>
 			<a href="">HOME</a></li>
 		<li>
